--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "express": "^4.14.1"
   },
   "devDependencies": {
-    "express": "^4.14.1"
+    "body-parser": "^1.16.0",
+    "express": "^4.14.1",
+    "mongoose": "^4.8.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
