--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
+    "grunt": "^1.0.1",
     "mongoose": "^4.8.1"
   },
   "scripts": {
