--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
     "grunt": "^1.0.1",
+    "grunt-express-server": "^0.5.3",
     "mongoose": "^4.8.1"
   },
   "scripts": {
