--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.14.1",
     "grunt": "^1.0.1",
     "grunt-express-server": "^0.5.3",
+    "grunt-mongo-bin": "^0.1.0",
     "mongoose": "^4.8.1"
   },
   "scripts": {
